--- a/Covid.API/appsettings.json
+++ b/Covid.API/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConStr": "Data Source = .; Initial Catalog = CovidDB; Integrated Security = True; Connect Timeout=30; Encrypt = False; MultiSubnetFailover=False",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
